fix button overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ p {
   border: 1px solid var(--text-main-color);
   background-color: var(--text-main-color);
 } */
-@media only screen and (max-device-width: 1280px) {
+@media only screen and (max-width: 1280px) {
   * {
     font-size: 0.9em;
   }
